# mobile_robot

./: CMakeLists.txt
include/: bearingsensor.h  rangesensor.h  robot.h  sensor.h
src/: main.cpp  robot.cpp
